// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`打字机指示点测试 二次渲染 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,24 +1,16 @@
  <DocumentFragment>
    <div
      class="container flow-markdown-body theme-default"
-     data-show-indicator="true"
+     data-show-indicator="false"
      dir="ltr"
      theme-mode="light"
    >
      <div
        class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
      >
        第一行
-       <span
-         class="container"
-       >
-         <span
-           class="indicator flashing"
-           data-testid="indicator"
-         />
-       </span>
      </div>
      <br
        class="container wrapper non-select"
      />
      "
`;

exports[`打字机指示点测试 代码块后不展示打字机指示点 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="container code-group-item--normal hide-indicator"
      data-testid="code_block"
    >
      <div
        class="code-area"
        dir="ltr"
      >
        <div
          class="header"
        >
          <div
            class="text"
          >
            <div
              class="icon"
            />
            plaintext
          </div>
          <div
            class="actions"
          >
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_copy"
              >
                <div
                  class="img"
                />
              </div>
            </div>
            <div
              class="item"
            >
              <div
                class="icon hoverable"
                data-testid="code_block_mode_switch"
              >
                <div
                  class="img"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="content content--plaintext"
        >
          <pre
            class="container language-plaintext"
          >
            <code
              class="language-plaintext"
            >
              print("hello")

            </code>
          </pre>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
  </div>
</DocumentFragment>
`;

exports[`打字机指示点测试 图片后不展示打字机指示点 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <div
        class="container"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="http://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`打字机指示点测试 打字机指示点与省略号共存 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一行...
      <span
        class="container"
      >
        <span
          class="indicator flashing"
          data-testid="indicator"
        />
      </span>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`打字机指示点测试 文本后展示打字机指示点 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一行
      <span
        class="container"
      >
        <span
          class="indicator flashing"
          data-testid="indicator"
        />
      </span>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`打字机指示点测试 自定义指示点 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一行
      <span
        data-testid="custom-indicator"
        style="color: grey;"
      >
        Waiting
      </span>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`打字机指示点测试 表格内展示打字机指示点 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br table-container"
    >
      <table>
        <thead>
          <tr>
            <th>
              foo
            </th>
            <th>
              bar
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              baz
            </td>
            <td>
              bim
              <span
                class="container"
              >
                <span
                  class="indicator flashing"
                  data-testid="indicator"
                />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`打字机指示点测试 链接后展示打字机指示点 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="true"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <a
        class="link"
        href="http://bytedance.com"
        target="_blank"
      >
        link
        <span
          class="container"
        >
          <span
            class="indicator flashing"
            data-testid="indicator"
          />
        </span>
      </a>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`省略号插入测试 二次渲染 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,11 +6,11 @@
      theme-mode="light"
    >
      <div
        class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
      >
-       第一行...
+       第一行
      </div>
      <br
        class="container wrapper non-select"
      />
      "
`;

exports[`省略号插入测试 图片后不插入省略号 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      prefix
      <div
        class="container"
        style="margin-top: 12px;"
      >
        <div
          class="image-wrapper"
          data-testid="mdbox_image"
          style="width: 100%; height: 0px; max-width: 400px;"
        >
          <span
            style="display: inline-block;"
          >
            <img
              alt="image"
              class="image"
              decoding="async"
              height="256"
              imagex-type="react"
              imagex-version="0.3.7"
              loading="lazy"
              src="http://bytedance.com/logo.png"
              style="border-radius: 12px; overflow: hidden; filter: blur(20px); background-size: cover; background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB2aWV3Qm94PSIwLDAsMjAlLDEwMCUiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgPGRlZnM+CiAgICA8bGluZWFyR3JhZGllbnQgaWQ9ImciPgogICAgICA8c3RvcCBzdG9wLWNvbG9yPSIjRjJGM0Y1IiBvZmZzZXQ9IjI1JSIgLz4KICAgICAgPHN0b3Agc3RvcC1jb2xvcj0iI0U1RTZFQiIgb2Zmc2V0PSIzNyUiIC8+CiAgICAgIDxzdG9wIHN0b3AtY29sb3I9IiNGMkYzRjUiIG9mZnNldD0iNjMlIiAvPgogICAgPC9saW5lYXJHcmFkaWVudD4KICA8L2RlZnM+CiAgPHJlY3QgaWQ9InIiIHdpZHRoPSI0MDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZykiIC8+CiAgPGFuaW1hdGUgeGxpbms6aHJlZj0iI3IiIGF0dHJpYnV0ZU5hbWU9IngiIGZyb209Ii0zMDAlIiB0bz0iMCUiIGR1cj0iMS41cyIgcmVwZWF0Q291bnQ9ImluZGVmaW5pdGUiICAvPgo8L3N2Zz4=); background-position: center;"
              width="400"
            />
          </span>
        </div>
      </div>
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`省略号插入测试 文本后插入省略号 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      第一行...
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`省略号插入测试 行内内容后插入省略号 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <code>
        print("hello")
      </code>
      ...
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
